# multicloud-data-agent

./: .env  .env.example  Dockerfile  README.md  deploy_to_agent_engine.py  purchasing_concierge_demo.py  purchasing_concierge_ui.py  pyproject.toml  requirements.txt  test_a2a_client.py  test_ae_client.py
purchasing_concierge/: .env  agent.py  purchasing_agent.py  remote_agent_connection.py
remote_agent/: Dockerfile  README.md  __main__.py  agent.py  agent_executor.py  pyproject.toml  requirements.txt
remote_agent_backup/: requirements.txt
remote_seller_agents/burger_agent/: .env.example  __main__.py  agent.py
remote_seller_agents/pizza_agent/: .env.example  agent.py
remote_seller_agents/remote_agent/: .env  Dockerfile  agent.py
